--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
               <label for="pic" class="fw-bold fs-4">Thumbnail</label>
               <input type="text" class="form-control" id="pic">
             </div>
+            <!-- Input div -->
+            <div>
+              <label for="price" class="fw-bold fs-4">Price</label>
+              <input type="number" class="form-control" id="price" min="0" step="0.01">
+            </div>
             <!-- textarea div -->
             <div>
               <label for="desc" class="fw-bold fs-4">Description</label>
